Fix; loading bar not animated when buffering on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -180,27 +180,21 @@ body {
     display: inline-block;
     background: #f42323;
     background-image: linear-gradient(to bottom, #b31217, #e52d27);
-    background-image: webkit-linear-gradient(to bottom, #b31217, #e52d27);
     transition: width 0.1s ease;
 
     &.buffering:after {
-      animation: move 2s linear infinite;
       content: "";
       position: absolute;
-      top: 0;
       width: 100%;
+      animation: move 2s linear infinite;
+      top: 0;
       left: 0;
       bottom: 0;
       right: 0;
       background-image: linear-gradient( -45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent );
-      background-image: -webkit-linear-gradient( -45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent );
       z-index: 100;
       background-size: 20px 20px;
       animation: move 2s linear infinite;
-      border-top-right-radius: 8px;
-      border-bottom-right-radius: 8px;
-      border-top-left-radius: 20px;
-      border-bottom-left-radius: 20px;
       overflow: hidden;
     }
   }
